--- a/DirectDealing/build.gradle
+++ b/DirectDealing/build.gradle
@@ -45,6 +45,7 @@ javafx {
 dependencies {
 	testImplementation(platform('org.junit:junit-bom:5.10.1'))
 	testImplementation('org.junit.jupiter:junit-jupiter')
+    implementation('org.xerial:sqlite-jdbc:3.34.0')
 }
 
 test {
