--- a/DirectDealing/build.gradle
+++ b/DirectDealing/build.gradle
@@ -47,6 +47,10 @@ dependencies {
 	testImplementation(platform('org.junit:junit-bom:5.10.1'))
 	testImplementation('org.junit.jupiter:junit-jupiter')
     implementation('org.xerial:sqlite-jdbc:3.34.0')
+    implementation 'com.calendarfx:view:11.10.0'
+    implementation 'org.mnode.ical4j:ical4j:3.0.26'
+    implementation 'org.slf4j:slf4j-api:1.7.32'
+    implementation 'org.slf4j:slf4j-simple:1.7.32'
 }
 
 test {
