--- a/DirectDealing/build.gradle
+++ b/DirectDealing/build.gradle
@@ -44,14 +44,18 @@ javafx {
 }
 
 dependencies {
-	testImplementation(platform('org.junit:junit-bom:5.10.1'))
-	testImplementation('org.junit.jupiter:junit-jupiter')
+    testImplementation(platform('org.junit:junit-bom:5.10.1'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
     implementation('org.xerial:sqlite-jdbc:3.34.0')
     implementation 'com.calendarfx:view:11.10.0'
     implementation 'org.mnode.ical4j:ical4j:3.0.26'
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'org.slf4j:slf4j-simple:1.7.32'
+    implementation 'javax.cache:cache-api:1.1.1'
+    implementation 'org.ehcache:ehcache:3.9.0' 
 }
+
+
 
 test {
     useJUnitPlatform()
@@ -80,7 +84,7 @@ testlogger {
 }
 
 shadowJar {
-    archiveBaseName.set('day2')
+    archiveBaseName.set('day3')
     archiveVersion.set('0.1.0')
     archiveClassifier.set('')
     manifest {
