--- a/DirectDealing/build.gradle
+++ b/DirectDealing/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter')
     implementation('org.xerial:sqlite-jdbc:3.34.0')
     implementation 'com.calendarfx:view:11.10.0'
-    implementation 'org.mnode.ical4j:ical4j:3.0.26'
+    implementation 'org.mnode.ical4j:ical4j:4.0.0-rc1'
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'org.slf4j:slf4j-simple:1.7.32'
     implementation 'javax.cache:cache-api:1.1.1'
